--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hank's Blog
+title: Hank's Tech Blog
 subtitle:
 description:
-author: Hui OuYang
+author: Hank OuYang
 language: 
 - zh-tw
 - en
