Add DATE to all pages

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hank's Tech Blog
+title: Tech Blog
 subtitle:
 description:
 author: Hank OuYang
